# roboblackbox

./: .gitignore  LICENSE  Procfile  README.md  context.md  docker-compose.yml  pyproject.toml  railway.json  render.yaml  start.ps1  tactics.md
.github/workflows/: deploy.yml
agent/: agent.py
agent/collectors/: mock.py  ros2.py
backend/: main.py  requirements.txt
backend/classifier/: classifier.py
backend/db/: client.py  schema.sql
docs/: CNAME  index.html
docs/dashboard/: index.html
frontend/: index.html  package-lock.json  package.json
frontend/src/: app.jsx  index.css
robotblackbox/: __init__.py  agent.py  cli.py  config.py
robotblackbox/collectors/: __init__.py  mock.py  ros2.py
server/: docker-compose.yml
server/backend/: main.py  requirements.txt
server/backend/classifier/: classifier.py
server/backend/db/: client.py  schema.sql
server/frontend/: index.html  package.json
server/frontend/src/: App.jsx
